# openclaw-hive

./: .gitignore  CLAUDE.md  README.md  test_changes.py
cli/: pyproject.toml
cli/hive_cli/: __init__.py  commands.py  main.py
cli/tests/: conftest.py  test_commands.py
contrib/handlers/: echo  git-sync  health-check  ping
contrib/shared-memory/: README.md
contrib/shared-memory/docs/: architecture.md  tokenomics.md
daemon/: pyproject.toml
daemon/hive_daemon/: __init__.py  config.py  dispatcher.py  envelope.py  heartbeat.py  main.py  oc_bridge.py  probe.py  router.py  session_map.py
daemon/tests/: conftest.py  test_config.py  test_dispatcher.py  test_envelope.py  test_heartbeat.py  test_main.py  test_oc_bridge.py  test_probe.py  test_router.py  test_session_map.py
docs/: phase1-plan.md  protocol.md
launchd/: ai.openclaw.hive-daemon.plist
skills/hive-master/: SKILL.md
skills/hive-member/: SKILL.md
systemd/: openclaw-hive-daemon.service
