[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hive-cli"
version = "0.1.0"
description = "CLI tool for OpenClaw hive coordination"
requires-python = ">=3.11"
dependencies = [
    "aiomqtt>=2.0",
    "click>=8.0",
    "hive-daemon",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
hive-cli = "hive_cli.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
