[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hive-daemon"
version = "0.1.0"
description = "MQTT coordination daemon for OpenClaw clusters"
requires-python = ">=3.11"
dependencies = [
    "aiomqtt>=2.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
]

[project.scripts]
hive-daemon = "hive_daemon.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
